Fix mild alignment issue w/ clear highlight button

--- a/assets/_sass/source.scss
+++ b/assets/_sass/source.scss
@@ -98,6 +98,7 @@ a.source__image {
 
 .highlight--active {
   .highlight__text span {
+    vertical-align: middle;
     padding: .125em .25em;
     background: #fff;
     color: #333;
